--- a/style.css
+++ b/style.css
@@ -202,3 +202,64 @@ body {
     display: flex;
     flex-direction: row;
 }
+.demo-cards-section {
+    width: 70%;
+    margin: 20px auto;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    color: #ffffff;
+
+}
+.demo-cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.demo-card {
+    width: 300px;
+    display: flex;
+    gap: 15px;
+    margin: 2px;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px 15px;
+    border-radius: 7px;
+    border: 2px solid #ffffff23;
+    background: #35276d;
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(4px);
+}
+.demo-card > img {
+    width: 250px;
+    height: 250px;
+}
+.demo-prof-details > img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+}
+.demo-card > h5 {
+    margin: 0;
+    align-self: self-start;
+    font-size: 20px;
+}
+.demo-card > .demo-prof-details {
+    display: flex;
+    gap: 7px;
+    align-self: self-start;
+}
+.demo-card h5, .demo-card p {
+    margin: 0;
+}
+.demo-game-btm {
+    cursor: pointer;
+    padding: 10px 0;
+    width: 90%;
+    text-align: center;
+    transform: skewX(-20deg);
+    border: 1px solid #7d63f1;
+    background: rgb(45, 30, 107);
+    background: linear-gradient(45deg, #7d63f1 6%, #2c2c94 28%, #f805d0 97%);
+    color: #ffffff;
+}
